[gd_scene load_steps=7 format=3 uid="uid://cn60xjdy3jlyt"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_pgm3h"]
[ext_resource type="Texture2D" uid="uid://ij7vpvnm5q5j" path="res://graphics/enemies/scout.png" id="1_vn4vq"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_d1il8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m6pw6"]
shader = ExtResource("2_d1il8")
shader_parameter/color = Color(0.733002, 2.75549e-06, 6.73831e-07, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w8x3w"]
radius = 55.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e7t7n"]
radius = 1161.21

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_pgm3h")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m6pw6")
position = Vector2(40, 27)
rotation = 1.5708
texture = ExtResource("1_vn4vq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_w8x3w")

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_e7t7n")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(120, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(130, 12)

[node name="Timers" type="Node" parent="."]

[node name="LaserCooldown" type="Timer" parent="Timers"]

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
